gedcom/tests/snapshots/tests__golden_files@incorrect_level.ged.snap
---
source: gedcom/tests/tests.rs
expression: "format!(\"{:?}\",\n    miette::Report::new(err).with_source_code(NamedSource::new(filename.to_string_lossy(),\n    data)))"
input_file: gedcom/tests/test_inputs/incorrect_level.ged
---
gedcom::tree_error::invalid_child_level

  × Line structure error
  ╰─▶ Invalid child level 1, expected 0 or less
   ╭─[incorrect_level.ged:1:1]
 1 │ 1 TAG
   · ┬
   · ╰── this should be less than or equal to 0
   ╰────
